tests/integration/snapshots/integration__snapshot__excessive_permissions-2.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"excessive-permissions/issue-336-repro.yml\")).args([\"--pedantic\"]).run()?"
---
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:4:3
  |
4 |   contents: write
  |   ^^^^^^^^^^^^^^^ contents: write is overly broad at the workflow level
  |
  = note: audit confidence → High

1 finding: 0 unknown, 0 informational, 0 low, 0 medium, 1 high
